# aws-iam-monitor

./: .dockerignore  .gitattributes  .gitignore  AUTHORS  CHANGELOG.md  CITATION.cff  CODEOWNERS  CONTRIBUTING.md  Dockerfile  INSTALL.md  Makefile  README.md  SECURITY.md  SUPPORT.md  docker-compose.yml  pyproject.toml
.github/workflow/: ci.yml  lint.yml  release.yml
docapi/: README.md
docapi/source/: conf.py  index.rst
docapi/source/about/: architecture.rst  features.rst  index.rst  overview.rst
docapi/source/community/: code_of_conduct.rst  contributing.rst  index.rst  support.rst
docapi/source/getting_started/: index.rst  installation.rst  usage.rst
docapi/source/project/: contact.rst  index.rst  license.rst  security.rst
project/: .env.example  iam_setup  iam_teardown  iamctl  setup_iam
project/aws/: trust-policy.json  users.csv
project/aws/lib/: logger
project/aws/policies/: AuditPolicy.json
project/lib/: common  requirements
project/policies/: DevPolicy.json  ProdPolicy.json  trust-policy.json
project/res/: groups.csv  roles.csv  users.csv
project/src/: group_management  policy_management  role_management  user_management
res/doc/: commit_convention.md  pull_request_template.md
res/doc/issue_templates/: bug_report.yml  config.yml  feature_request.yml  security.yml  task.yml
res/drawio/: aws-iam-monitor-architecture-diagram.drawio
res/ppt/: sujet-stage-audit-iam-aws.pptx
